--- a/.public/style/style.css
+++ b/.public/style/style.css
@@ -53,5 +53,42 @@ header {
   background-color: #f6f6f6;
   text-align: center;
 }
+.explor__btn {
+  border: 0;
+  padding: 1rem 1rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: white;
+  cursor: pointer;
+  background-color: #686868;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+}
+
+.process {
+  padding: 3rem 1rem 3rem 1rem;
+}
+.process__steps {
+  display: flex;
+  position: relative;
+  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+  border-radius: 1rem;
+  background-color: #f6f6f6;
+  padding: 1.5rem;
+  margin: 0rem 0rem 1rem 0.75rem;
+}
+.process__list {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
+.process__icon {
+  color: #7e7e7e;
+  margin-right: 1rem;
+}
+.process__title {
+  margin-bottom: 1.5rem;
+}
 
 /*# sourceMappingURL=style.css.map */
