--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,4 +56,41 @@ header {
     padding: 2rem;
     background-color: #f6f6f6;
     text-align: center;
+    &__btn {
+        border: 0;
+        padding: 1rem 1rem;
+        font-weight: 500;
+        font-size: 1.1rem;
+        border-radius: 100px;
+        color: white;
+        cursor: pointer;
+        background-color: #686868;
+        background-image: linear-gradient(0deg, rgba(147, 86, 220, .9), rgba(255, 121, 218, .9));
+        box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
+    }
+}
+
+.process {
+    padding: 3rem 1rem 3rem 1rem;
+    &__steps {
+        display: flex;
+        position: relative;
+        box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 15%);
+        border-radius: 1rem;
+        background-color: #f6f6f6;
+        padding: 1.5rem;
+        margin: 0rem 0rem 1rem 0.75rem;
+    }
+    &__list {
+        padding: 0;
+        list-style: none;
+        margin: 0;
+    }
+    &__icon {
+        color: #7e7e7e;
+        margin-right: 1rem;
+    }
+    &__title {
+        margin-bottom: 1.5rem;
+    }
 }
