--- a/.public/style/style.css
+++ b/.public/style/style.css
@@ -61,7 +61,7 @@ header {
   border-radius: 100px;
   color: white;
   cursor: pointer;
-  background-color: #686868;
+  background-color: #f6f6f6;
   background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
 }
@@ -77,10 +77,10 @@ header {
   background-color: #f6f6f6;
   padding: 1.5rem;
   margin: 0rem 0rem 1rem 0.75rem;
+  font-weight: bolder;
 }
 .process__list {
   padding: 0;
-  list-style: none;
   margin: 0;
 }
 .process__icon {
@@ -89,6 +89,79 @@ header {
 }
 .process__title {
   margin-bottom: 1.5rem;
+}
+.process__number {
+  display: table-cell;
+  vertical-align: middle;
+  background-color: #9356DC;
+  color: white;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  margin-right: 20px;
+  margin-left: -35px;
+  text-align: center;
+}
+
+.restaurants {
+  padding: 3rem 1rem 3rem 1rem;
+  background-color: #f6f6f6;
+}
+.restaurants__title {
+  margin-bottom: 1.5rem;
+}
+.restaurants__list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
+.carte {
+  border-radius: 1rem;
+  box-shadow: 4px 4px 6px #aaa;
+  position: relative;
+  background: white;
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+.carte__img {
+  object-fit: cover;
+  width: 100%;
+  height: 10.875rem;
+  box-shadow: none;
+  border-radius: 1rem 1rem 0 0;
+}
+.carte__badge {
+  background-color: #99e2d0;
+  color: #008766;
+  padding: 0.5rem;
+  border-radius: 0.125rem;
+  position: absolute;
+  top: 1rem;
+  right: 0.75rem;
+  font-weight: bold;
+  font-size: small;
+}
+.carte__footer {
+  display: flex;
+  padding: 0.875rem;
+}
+.carte__title {
+  margin: 0 0 0.2rem 0;
+  font-size: large;
+  font-weight: bold;
+}
+.carte__subtitle {
+  font-size: medium;
+}
+.carte__fav {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  right: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
