--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,7 @@ h1 {
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+$color-background: #f6f6f6;
 header {
     text-align: center;
     padding-top: 1rem;
@@ -54,7 +55,7 @@ header {
 
 .explor {
     padding: 2rem;
-    background-color: #f6f6f6;
+    background-color: $color-background;
     text-align: center;
     &__btn {
         border: 0;
@@ -64,7 +65,7 @@ header {
         border-radius: 100px;
         color: white;
         cursor: pointer;
-        background-color: #686868;
+        background-color: $color-background;
         background-image: linear-gradient(0deg, rgba(147, 86, 220, .9), rgba(255, 121, 218, .9));
         box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
     }
@@ -77,13 +78,13 @@ header {
         position: relative;
         box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 15%);
         border-radius: 1rem;
-        background-color: #f6f6f6;
+        background-color: $color-background;
         padding: 1.5rem;
         margin: 0rem 0rem 1rem 0.75rem;
+        font-weight: bolder;
     }
     &__list {
         padding: 0;
-        list-style: none;
         margin: 0;
     }
     &__icon {
@@ -92,5 +93,79 @@ header {
     }
     &__title {
         margin-bottom: 1.5rem;
+    }
+    &__number {
+        display: table-cell;
+        vertical-align: middle;
+        background-color: $color-primary;
+        color: white;
+        border-radius: 50%;
+        height: 25px;
+        width: 25px;
+        margin-right: 20px;
+        margin-left: -35px;
+        text-align: center;
+    }
+}
+
+.restaurants {
+    padding: 3rem 1rem 3rem 1rem;
+    background-color: $color-background;
+    &__title {
+        margin-bottom: 1.5rem;
+    }
+    &__list {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 2rem;
+        row-gap: 2rem;
+    }
+}
+
+.carte {
+    border-radius: 1rem;
+    box-shadow: 4px 4px 6px #aaa;
+    position: relative;
+    background: white;
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    &__img {
+        object-fit: cover;
+        width: 100%;
+        height: 10.875rem;
+        box-shadow: none;
+        border-radius: 1rem 1rem 0 0;
+    }
+    &__badge {
+        background-color: #99e2d0;
+        color: #008766;
+        padding: .5rem;
+        border-radius: .125rem;
+        position: absolute;
+        top: 1rem;
+        right: .75rem;
+        font-weight: bold;
+        font-size: small;
+    }
+    &__footer {
+        display: flex;
+        padding: 0.875rem;
+    }
+    &__txt {}
+    &__title {
+        margin: 0 0 0.2rem 0;
+        font-size: large;
+        font-weight: bold;
+    }
+    &__subtitle {
+        font-size: medium;
+    }
+    &__fav {
+        display: flex;
+        position: absolute;
+        align-items: center;
+        justify-content: center;
+        right: 1.5rem;
     }
 }
