fin section restaurants + ajout footer

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -31,7 +31,9 @@ h1 {
 
 header {
   text-align: center;
-  padding-top: 1rem;
+  padding-top: 1.375rem;
+  padding-bottom: 0.75rem;
+  box-shadow: 0 4px 2px -2px #cecece;
 }
 
 .localisation {
@@ -112,9 +114,9 @@ header {
 }
 .restaurants__list {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  column-gap: 2rem;
-  row-gap: 2rem;
+  /*grid-template-columns: repeat(1, 1fr);*/
+  column-gap: 1.5rem;
+  row-gap: 1.5rem;
 }
 
 .carte {
@@ -162,6 +164,24 @@ header {
   align-items: center;
   justify-content: center;
   right: 1.5rem;
+}
+
+.footer {
+  background-color: #353535;
+  padding: 1rem;
+  display: table-flex;
+}
+.footer__logo {
+  height: 18px;
+  width: 98px;
+}
+.footer__logo--invert {
+  filter: invert(1);
+}
+.footer__link {
+  margin-top: 1.5rem;
+  color: white;
+  position: relative;
 }
 
 /*# sourceMappingURL=style.css.map */
