--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,7 +36,9 @@ $color-tertiary: #99E2D0;
 $color-background: #f6f6f6;
 header {
     text-align: center;
-    padding-top: 1rem;
+    padding-top: 1.375rem;
+    padding-bottom: 0.75rem;
+    box-shadow: 0 4px 2px -2px #cecece;
 }
 
 .localisation {
@@ -116,9 +118,9 @@ header {
     }
     &__list {
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        column-gap: 2rem;
-        row-gap: 2rem;
+        /*grid-template-columns: repeat(1, 1fr);*/
+        column-gap: 1.5rem;
+        row-gap: 1.5rem;
     }
 }
 
@@ -167,5 +169,23 @@ header {
         align-items: center;
         justify-content: center;
         right: 1.5rem;
+    }
+}
+
+.footer {
+    background-color: #353535;
+    padding: 1rem;
+    display: table-flex;
+    &__logo {
+        height: 18px;
+        width: 98px;
+    }
+    &__logo--invert {
+        filter: invert(1);
+    }
+    &__link {
+        margin-top: 1.5rem;
+        color: white;
+        position: relative;
     }
 }
