--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,187 +1,1 @@
-@font-face {
-  font-family: "Roboto_thin";
-  src: url("./public/font/Roboto-100Thin.ttf");
-  font-weight: 100;
-  font-family: "Roboto_light";
-  src: url("./public/font/Roboto-300Light.ttf");
-  font-weight: 300;
-  font-family: "Roboto_regular";
-  src: url("./public/font/Roboto-400Regular.ttf");
-  font-weight: 400;
-  font-family: "Roboto_medium";
-  src: url("./public/font/Roboto-500Medium.ttf");
-  font-weight: 500;
-  font-family: "Roboto_bold";
-  src: url("./public/font/Roboto-700Bold.ttf");
-  font-weight: 700;
-  font-family: "Roboto_black";
-  src: url("./public/font/Roboto-900Black.ttf");
-  font-weight: 900;
-  font-style: normal;
-}
-body,
-html {
-  margin: 0;
-  font-family: "Roboto_regular", sans-serif;
-}
-
-h1 {
-  margin: 0;
-}
-
-header {
-  text-align: center;
-  padding-top: 1.375rem;
-  padding-bottom: 0.75rem;
-  box-shadow: 0 4px 2px -2px #cecece;
-}
-
-.localisation {
-  display: flex;
-  justify-content: center;
-  background-color: #eaeaea;
-  font-size: 1.2rem;
-  padding: 1rem 1rem;
-}
-.localisation__icon {
-  margin-right: 1rem;
-}
-.localisation__text {
-  font-weight: 700;
-}
-
-.explor {
-  padding: 2rem;
-  background-color: #f6f6f6;
-  text-align: center;
-}
-.explor__btn {
-  border: 0;
-  padding: 1rem 1rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  border-radius: 100px;
-  color: white;
-  cursor: pointer;
-  background-color: #f6f6f6;
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
-}
-
-.process {
-  padding: 3rem 1rem 3rem 1rem;
-}
-.process__steps {
-  display: flex;
-  position: relative;
-  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-  border-radius: 1rem;
-  background-color: #f6f6f6;
-  padding: 1.5rem;
-  margin: 0rem 0rem 1rem 0.75rem;
-  font-weight: bolder;
-}
-.process__list {
-  padding: 0;
-  margin: 0;
-}
-.process__icon {
-  color: #7e7e7e;
-  margin-right: 1rem;
-}
-.process__title {
-  margin-bottom: 1.5rem;
-}
-.process__number {
-  display: table-cell;
-  vertical-align: middle;
-  background-color: #9356DC;
-  color: white;
-  border-radius: 50%;
-  height: 25px;
-  width: 25px;
-  margin-right: 20px;
-  margin-left: -35px;
-  text-align: center;
-}
-
-.restaurants {
-  padding: 3rem 1rem 3rem 1rem;
-  background-color: #f6f6f6;
-}
-.restaurants__title {
-  margin-bottom: 1.5rem;
-}
-.restaurants__list {
-  display: grid;
-  /*grid-template-columns: repeat(1, 1fr);*/
-  column-gap: 1.5rem;
-  row-gap: 1.5rem;
-}
-
-.carte {
-  border-radius: 1rem;
-  box-shadow: 4px 4px 6px #aaa;
-  position: relative;
-  background: white;
-  display: block;
-  text-decoration: none;
-  color: inherit;
-}
-.carte__img {
-  object-fit: cover;
-  width: 100%;
-  height: 10.875rem;
-  box-shadow: none;
-  border-radius: 1rem 1rem 0 0;
-}
-.carte__badge {
-  background-color: #99e2d0;
-  color: #008766;
-  padding: 0.5rem;
-  border-radius: 0.125rem;
-  position: absolute;
-  top: 1rem;
-  right: 0.75rem;
-  font-weight: bold;
-  font-size: small;
-}
-.carte__footer {
-  display: flex;
-  padding: 0.875rem;
-}
-.carte__title {
-  margin: 0 0 0.2rem 0;
-  font-size: large;
-  font-weight: bold;
-}
-.carte__subtitle {
-  font-size: medium;
-}
-.carte__fav {
-  display: flex;
-  position: absolute;
-  align-items: center;
-  justify-content: center;
-  right: 1.5rem;
-}
-
-.footer {
-  background-color: #353535;
-  padding: 1rem;
-  display: table-flex;
-}
-.footer__logo {
-  height: 18px;
-  width: 98px;
-}
-.footer__logo--invert {
-  filter: invert(1);
-}
-.footer__link {
-  margin-top: 1.5rem;
-  color: white;
-  position: relative;
-}
-
-/*# sourceMappingURL=style.css.map */
+@font-face{font-family:"Roboto_thin";src:url("./public/font/Roboto-100Thin.ttf");font-weight:100;font-family:"Roboto_light";src:url("./public/font/Roboto-300Light.ttf");font-weight:300;font-family:"Roboto_regular";src:url("./public/font/Roboto-400Regular.ttf");font-weight:400;font-family:"Roboto_medium";src:url("./public/font/Roboto-500Medium.ttf");font-weight:500;font-family:"Roboto_bold";src:url("./public/font/Roboto-700Bold.ttf");font-weight:700;font-family:"Roboto_black";src:url("./public/font/Roboto-900Black.ttf");font-weight:900;font-style:normal}body,html{margin:0;font-family:"Roboto_regular",sans-serif}h1{margin:0}header{text-align:center;padding-top:1.375rem;padding-bottom:.75rem;box-shadow:0 4px 2px -2px #cecece}.localisation{display:flex;justify-content:center;background-color:#eaeaea;background:linear-gradient(to bottom, #cfcfcf, #eaeaea 10%);font-size:1.2rem;padding:1rem 1rem}.localisation__icon{margin-right:1rem}.localisation__text{font-weight:700}.explor{padding:2rem;background-color:#f6f6f6;text-align:center}.explor__btn{border:0;padding:1rem 1rem;font-weight:500;font-size:1.1rem;border-radius:100px;color:#fff;cursor:pointer;background-color:#f6f6f6;background-image:linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));box-shadow:.25rem .25rem 10px rgba(0,0,0,.25)}.process{padding:3rem 1rem 3rem 1rem}.process__steps{display:flex;position:relative;box-shadow:.25rem .25rem .5rem rgba(0,0,0,.15);border-radius:1rem;background-color:#f6f6f6;padding:1.5rem;margin:0rem 0rem 1rem .75rem;font-weight:bolder}.process__list{padding:0;margin:0}.process__icon{color:#7e7e7e;margin-right:1rem}.process__title{margin-bottom:1.5rem}.process__number{line-height:25px;background-color:#9356dc;color:#fff;border-radius:50%;height:25px;width:25px;margin-right:20px;margin-left:-35px;text-align:center}.restaurants{padding:3rem 1rem 3rem 1rem;background-color:#f6f6f6}.restaurants__title{margin-bottom:1.5rem}.restaurants__list{display:grid;column-gap:1.5rem;row-gap:1.5rem}.carte{border-radius:1rem;box-shadow:4px 4px 6px #aaa;position:relative;background:#fff;display:block;text-decoration:none;color:inherit}.carte__img{object-fit:cover;width:100%;height:10.875rem;box-shadow:none;border-radius:1rem 1rem 0 0}.carte__badge{background-color:#99e2d0;color:#008766;padding:.5rem;border-radius:.125rem;position:absolute;top:1rem;right:.75rem;font-weight:bold;font-size:small}.carte__footer{display:flex;padding:.875rem}.carte__title{margin:0 0 .2rem 0;font-size:large;font-weight:bold}.carte__subtitle{font-size:medium}.carte__fav{display:flex;position:absolute;align-items:center;justify-content:center;right:1.5rem}.footer{background-color:#353535;padding:1rem;display:table-flex}.footer__logo{height:18px;width:98px}.footer__logo--invert{filter:invert(1)}.footer__link{margin-top:1.5rem;color:#fff;position:relative}/*# sourceMappingURL=style.css.map */
