--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,6 +45,7 @@ header {
     display: flex;
     justify-content: center;
     background-color: #eaeaea;
+    background: linear-gradient(to bottom, #cfcfcf, #eaeaea 10%);
     font-size: 1.2rem;
     padding: 1rem 1rem;
     &__icon {
@@ -97,9 +98,8 @@ header {
         margin-bottom: 1.5rem;
     }
     &__number {
-        display: table-cell;
-        vertical-align: middle;
-        background-color: $color-primary;
+        line-height: 25px;
+        background-color: #9356DC;
         color: white;
         border-radius: 50%;
         height: 25px;
