--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,191 +1,208 @@
-@font-face {
-    font-family: 'Roboto_thin';
-    src: url('./public/font/Roboto-100Thin.ttf');
-    font-weight: 100;
-    font-family: 'Roboto_light';
-    src: url('./public/font/Roboto-300Light.ttf');
-    font-weight: 300;
-    font-family: 'Roboto_regular';
-    src: url('./public/font/Roboto-400Regular.ttf');
-    font-weight: 400;
-    font-family: 'Roboto_medium';
-    src: url('./public/font/Roboto-500Medium.ttf');
-    font-weight: 500;
-    font-family: 'Roboto_bold';
-    src: url('./public/font/Roboto-700Bold.ttf');
-    font-weight: 700;
-    font-family: 'Roboto_black';
-    src: url('./public/font/Roboto-900Black.ttf');
-    font-weight: 900;
-    font-style: normal;
-}
-
-body,
-html {
-    margin: 0;
-    font-family: 'Roboto_regular', sans-serif;
-}
-
-h1 {
-    margin: 0;
-}
-
-$color-primary: #9356DC;
-$color-secondary: #FF79DA;
-$color-tertiary: #99E2D0;
-$color-background: #f6f6f6;
-header {
-    text-align: center;
-    padding-top: 1.375rem;
-    padding-bottom: 0.75rem;
-    box-shadow: 0 4px 2px -2px #cecece;
-}
-
-.localisation {
-    display: flex;
-    justify-content: center;
-    background-color: #eaeaea;
-    background: linear-gradient(to bottom, #cfcfcf, #eaeaea 10%);
-    font-size: 1.2rem;
-    padding: 1rem 1rem;
-    &__icon {
-        margin-right: 1rem;
+    @font-face {
+        font-family: 'Roboto';
+        src: url("/public/font/Roboto-500Medium.ttf");
+        font-family: 'Shrikhand';
+        src: url("/public/font/Shrikhand-Regular.ttf");
+        font-style: normal;
     }
-    &__text {
-        font-weight: 700;
+    
+    $color-primary: #9356DC;
+    $color-secondary: #FF79DA;
+    $color-tertiary: #99E2D0;
+    $color-background: #f6f6f6;
+    body,
+    html {
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
     }
-}
-
-.explor {
-    padding: 2rem;
-    background-color: $color-background;
-    text-align: center;
-    &__btn {
-        border: 0;
-        padding: 1rem 1rem;
-        font-weight: 500;
-        font-size: 1.1rem;
-        border-radius: 100px;
-        color: white;
-        cursor: pointer;
-        background-color: $color-background;
-        background-image: linear-gradient(0deg, rgba(147, 86, 220, .9), rgba(255, 121, 218, .9));
-        box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
-    }
-}
-
-.process {
-    padding: 3rem 1rem 3rem 1rem;
-    &__steps {
-        display: flex;
-        position: relative;
-        box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 15%);
-        border-radius: 1rem;
-        background-color: $color-background;
-        padding: 1.5rem;
-        margin: 0rem 0rem 1rem 0.75rem;
-        font-weight: bolder;
-    }
-    &__list {
-        padding: 0;
+    
+    h1 {
         margin: 0;
     }
-    &__icon {
-        color: #7e7e7e;
-        margin-right: 1rem;
-    }
-    &__title {
-        margin-bottom: 1.5rem;
-    }
-    &__number {
-        line-height: 25px;
-        background-color: #9356DC;
-        color: white;
-        border-radius: 50%;
-        height: 25px;
-        width: 25px;
-        margin-right: 20px;
-        margin-left: -35px;
+    
+    header {
         text-align: center;
+        padding-top: 1.375rem;
+        padding-bottom: 0.75rem;
+        box-shadow: 0 4px 2px -2px #cecece;
+        font-family: 'Shrikhand';
     }
-}
-
-.restaurants {
-    padding: 3rem 1rem 3rem 1rem;
-    background-color: $color-background;
-    &__title {
-        margin-bottom: 1.5rem;
+    
+    .container {
+        max-width: 1400px;
+        margin-left: auto;
+        margin-right: auto;
     }
-    &__list {
-        display: grid;
-        /*grid-template-columns: repeat(1, 1fr);*/
-        column-gap: 1.5rem;
-        row-gap: 1.5rem;
-    }
-}
-
-.carte {
-    border-radius: 1rem;
-    box-shadow: 4px 4px 6px #aaa;
-    position: relative;
-    background: white;
-    display: block;
-    text-decoration: none;
-    color: inherit;
-    &__img {
-        object-fit: cover;
-        width: 100%;
-        height: 10.875rem;
-        box-shadow: none;
-        border-radius: 1rem 1rem 0 0;
-    }
-    &__badge {
-        background-color: #99e2d0;
-        color: #008766;
-        padding: .5rem;
-        border-radius: .125rem;
-        position: absolute;
-        top: 1rem;
-        right: .75rem;
-        font-weight: bold;
-        font-size: small;
-    }
-    &__footer {
+    
+    .localisation {
         display: flex;
-        padding: 0.875rem;
-    }
-    &__txt {}
-    &__title {
-        margin: 0 0 0.2rem 0;
-        font-size: large;
-        font-weight: bold;
-    }
-    &__subtitle {
-        font-size: medium;
-    }
-    &__fav {
-        display: flex;
-        position: absolute;
-        align-items: center;
         justify-content: center;
-        right: 1.5rem;
+        background-color: #eaeaea;
+        background: linear-gradient(to bottom, #cfcfcf, #eaeaea 10%);
+        font-size: 1.2rem;
+        padding: 1rem 1rem;
+        &__icon {
+            margin-right: 1rem;
+        }
+        &__text {
+            font-weight: 700;
+        }
     }
-}
-
-.footer {
-    background-color: #353535;
-    padding: 1rem;
-    display: table-flex;
-    &__logo {
-        height: 18px;
-        width: 98px;
+    
+    .explor {
+        padding: 2rem;
+        background-color: $color-background;
+        text-align: center;
+        &__btn {
+            border: 0;
+            padding: 1rem 1rem;
+            font-weight: 500;
+            font-size: 1.1rem;
+            border-radius: 100px;
+            color: white;
+            cursor: pointer;
+            background-color: $color-background;
+            background-image: linear-gradient(0deg, rgba(147, 86, 220, .9), rgba(255, 121, 218, .9));
+            box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
+        }
     }
-    &__logo--invert {
-        filter: invert(1);
+    
+    .process {
+        padding: 3rem 1rem 3rem 1rem;
+        &__steps {
+            display: flex;
+            position: relative;
+            box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 15%);
+            border-radius: 1rem;
+            background-color: $color-background;
+            padding: 1.5rem;
+            margin: 0rem 0rem 1rem 0.75rem;
+            font-weight: bolder;
+        }
+        &__list {
+            padding: 0;
+            margin: 0;
+        }
+        @media (min-width: 768px) {
+            .process__list {
+                display: flex;
+                justify-content: center;
+            }
+            .process__steps {
+                margin-left: 1.5rem;
+            }
+        }
+        &__icon {
+            color: #7e7e7e;
+            margin-right: 1rem;
+        }
+        &__title {
+            margin-bottom: 1.5rem;
+        }
+        &__number {
+            line-height: 25px;
+            background-color: #9356DC;
+            color: white;
+            border-radius: 50%;
+            height: 25px;
+            width: 25px;
+            margin-right: 20px;
+            margin-left: -35px;
+            text-align: center;
+        }
     }
-    &__link {
-        margin-top: 1.5rem;
-        color: white;
+    
+    .restaurants {
+        padding: 3rem 1rem 3rem 1rem;
+        background-color: $color-background;
+        &__title {
+            margin-bottom: 1.5rem;
+        }
+        &__list {
+            display: grid;
+            column-gap: 1.5rem;
+            row-gap: 1.5rem;
+        }
+    }
+    
+    .carte {
+        border-radius: 1rem;
+        box-shadow: 4px 4px 6px #aaa;
         position: relative;
+        background: white;
+        display: block;
+        text-decoration: none;
+        color: inherit;
+        &__img {
+            object-fit: cover;
+            width: 100%;
+            height: 10.875rem;
+            box-shadow: none;
+            border-radius: 1rem 1rem 0 0;
+        }
+        &__badge {
+            background-color: #99e2d0;
+            color: #008766;
+            padding: .5rem;
+            border-radius: .125rem;
+            position: absolute;
+            top: 1rem;
+            right: .75rem;
+            font-weight: bold;
+            font-size: small;
+        }
+        &__footer {
+            display: flex;
+            padding: 0.875rem;
+        }
+        &__title {
+            margin: 0 0 0.2rem 0;
+            font-size: large;
+            font-weight: bold;
+        }
+        &__subtitle {
+            font-size: medium;
+        }
+        &__fav {
+            display: flex;
+            position: absolute;
+            align-items: center;
+            justify-content: center;
+            right: 1.5rem;
+            &--size {
+                font-size: 1.3rem;
+            }
+            &:hover {
+                color: $color-primary;
+            }
+        }
     }
-}
+    
+    .footer {
+        background-color: #353535;
+        padding: 1rem;
+        text-decoration: none;
+        &__logo {
+            height: 18px;
+            width: 98px;
+        }
+        &__logo--size {
+            margin: 0;
+            font-size: 1.2rem;
+            font-family: 'Shrikhand';
+            color: white;
+            font-weight: lighter;
+        }
+        &__link,
+        a {
+            margin-top: 1.5rem;
+            color: white;
+            position: relative;
+            text-decoration: none;
+        }
+        &__icon--size {
+            width: 0.75rem;
+            height: 0.75rem;
+            padding-right: 0.75rem;
+        }
+    }
