--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'Roboto';
-    src: url("/public/font/Roboto-500Medium.ttf");
+    src: url("./public/font/Roboto-500Medium.ttf");
 }
 
 @font-face {
     font-family: 'Shrikhand';
-    src: url("/public/font/Shrikhand-Regular.ttf");
+    src: url("./public/font/Shrikhand-Regular.ttf");
 }
 
 @font-face {
     font-family: 'Roboto-light';
-    src: url("/public/font/Roboto-100Thin.ttf");
+    src: url("./public/font/Roboto-100Thin.ttf");
 }
 
 $color-primary: #9356DC;
