--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Roboto';
-    src: url("./public/font/Roboto-500Medium.ttf");
+    src: url("public/font/Roboto-500Medium.ttf");
 }
 
 @font-face {
